@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -41,9 +41,9 @@ import jdk.test.lib.jvmti.DebugeeClass;
  *       and save JNIEnv pointer now passed as argument.
  *
  * @library /test/lib
- * @compile --enable-preview -source ${jdk.version} monitorwait01.java
- * @run main/othervm/native --enable-preview -agentlib:monitorwait01 monitorwait01 platform
- * @run main/othervm/native --enable-preview -agentlib:monitorwait01 monitorwait01 virtual
+ * @compile monitorwait01.java
+ * @run main/othervm/native -agentlib:monitorwait01 monitorwait01 platform
+ * @run main/othervm/native -agentlib:monitorwait01 monitorwait01 virtual
  */
 
 
